--- a/index.html
+++ b/index.html
@@ -148,10 +148,13 @@
       <div class="col-12 col-lg-4">
         <div id="profile">
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
+          <img src="/author/hongru-wang/signature.jpeg" alt="Hongru WANG">
+          
           <div class="portrait-title">
             <h2>Hongru WANG</h2> 
-            <h3>Ph.D. in System Engineering and Engineering Management</h3>
+            <h3>Ph.D. Candidate</h3>
             <h3>
+              <span>Department of Systems Engineering and Engineering Management,</span>
               <span>The Chinese University of Hong Kong</span>
             </h3>
           </div>
