--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link " href="https://rulegreen.github.io/resources/"><span>Resources</span></a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
         </li>
 
@@ -148,35 +152,35 @@
       <div class="col-12 col-lg-4">
         <div id="profile">
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
-          <img src="/author/hongru-wang/signature.jpeg" alt="Hongru WANG">
+          <img src="/author/hongru-wang/signature.jpeg"  style="width:60%;margin-left:20px;margin-top:20px;" alt="Hongru WANG">
           
           <div class="portrait-title">
             <h2>Hongru WANG</h2> 
             <h3>Ph.D. Candidate</h3>
             <h3>
-              <span>Department of Systems Engineering and Engineering Management,</span>
-              <span>The Chinese University of Hong Kong</span>
+              <p>Department of Systems Engineering and Engineering Management,</p>
+              <p>The Chinese University of Hong Kong</p>
             </h3>
           </div>
 
           <ul class="network-icon" aria-hidden="true">
             <li>
               <a href="mailto:hrwang@se.cuhk.edu.hk" >
-                <i class="fas fa-envelope big-icon"></i>
+                <i class="fas fa-envelope big-icon" style="color: #EA4335;"></i>
               </a>
             </li>
 
 
             <li>
               <a href="https://scholar.google.com/citations?hl=en&user=s6UtVYUAAAAJ" target="_blank" rel="noopener">
-                <i class="ai ai-google-scholar big-icon"></i>
+                <i class="ai ai-google-scholar big-icon" style="color: #4285F4;"></i>
               </a>
             </li>
 
 
             <li>
               <a href="https://github.com/rulegreen" target="_blank" rel="noopener">
-                <i class="fab fa-github big-icon"></i>
+                <i class="fab fa-github big-icon" style="color: #304880;"></i>
               </a>
             </li>
 
