--- a/resources/index.html
+++ b/resources/index.html
@@ -123,7 +123,7 @@
 
         <div class="universal-wrapper pt-3">
             <h2>
-                <li>Upcoming Talks</li>
+                <li>Github Repos</li>
             </h2>
         </div>
 
@@ -132,29 +132,11 @@
                 <div class="col-lg-12">
 
                     <ul>
-                        <li><a href="/papers/safari/safari_emnlp2023.pdf">Large Language Model as Source Planner for Knowledge-grouded Dialogue System</a></li>
-                          <ul>
-                            <li>NILLI Workshop, EMNLP 2023, Dec 2023 </li>
-                            <li>Doctoral Forum, CUHK, Dec 2023 </li>
-                          </ul>
-                        
-                        <li>Large Language Model-based Dialogue System</li>
-                        <ul>
-                          <li>Huawei Noah Lab (HK), Nov 2023</li>
-                          <li>深度学习自然语言处理, Nov 2023</li>
-                          <li>Techbeat (将门创投), Dec 2023</li>
-                        </ul>
+                        <li><a href="https://github.com/ruleGreen/Survey-Evolution-DS">Survey of Evolution of LM-Based Dialogue System (constantly updating!!)</a></li>
                     </ul>
                 
                 </div>
             </div>
-        </div>
-
-
-        <div class="universal-wrapper pt-3">
-            <h2>
-                <li>Recent Talks </li>
-            </h2>
         </div>
 
 
