--- a/publication/index.html
+++ b/publication/index.html
@@ -85,7 +85,10 @@
                           <a class="nav-link " href="https://rulegreen.github.io/talk/"data-target="#contact"><span>Talks</span></a>
                         </li>
 
-
+                        <li class="nav-item">
+                          <a class="nav-link " href="https://rulegreen.github.io/resources/"><span>Resources</span></a>
+                        </li>
+                        
                         <li class="nav-item">
                           <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
                         </li>
