--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="col-12 col-lg-4">
         <div id="profile">
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
-          <img src="/author/hongru-wang/signature.jpeg"  style="width:60%;margin-left:20px;margin-top:20px;" alt="Hongru WANG">
+          <img src="/author/hongru-wang/signature.png"  style="width:60%;margin-left:20px;margin-top:20px;" alt="Hongru WANG">
           
           <div class="portrait-title">
             <h2>Hongru WANG</h2> 
