--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <ul class="network-icon" aria-hidden="true">
             <li>
               <a href="mailto:hrwang@se.cuhk.edu.hk" >
-                <i class="fas fa-envelope big-icon" style="color: #EA4335;"></i>
+                <i class="fas fa-envelope big-icon"></i>
               </a>
             </li>
 
