--- a/resources/index.html
+++ b/resources/index.html
@@ -132,7 +132,7 @@
                 <div class="col-lg-12">
 
                     <ul>
-                        <li><a href="https://github.com/ruleGreen/Survey-Evolution-DS">Survey of Evolution of LM-Based Dialogue System (constantly updating!!)</a></li>
+                        <li><a href="https://github.com/ruleGreen/Survey-Evolution-DS">&#128214; Survey of Evolution of LM-Based Dialogue System (constantly updating!!)</a></li>
                     </ul>
                 
                 </div>
