--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a> Feel free to star or add your papers. </li>
           <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
           <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
           <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
