--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       
       <h1>About Me <a href="/cv/hongru_cv_eng.pdf" style="font-size: 20px;">[CV]</a></h1>
 
-      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. My research interests include LLM-based dialogue systems [EMNLP 2023], personalized open-domain dialogue systems [ACL 2023], and reinforcement learning [ICASSP 2022]. Feel free to reach out to me via email for any discussion or cooperation.
+      <p>I am currently a third-year Ph.D. Candidate, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. My research interests include Dialogue Systems [ACL 2023][EMNLP 2023], and Reinforcement Learning from AI Feedback (RLAIF) [ICASSP 2022], and Large Language Models [EMNLP 2023]. Feel free to reach out to me via email for any discussion or cooperation.
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
       
@@ -293,7 +293,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a> Feel free to star or add your papers. </li>
+          <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a>. We also write a blog <a href="https://candle-walker-56d.notion.site/810f553406cb42558c41d00a560467cf">here</a> for better understanding. Feel free to star or add your papers. </li>
           <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
           <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
           <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
