--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <img src="https://img.shields.io/badge/LLM-orange">
           <span><em>Findings of EMNLP 2023</em></span>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
         </div>
