--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     </div>
     <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
       <ul class="navbar-nav d-md-inline-flex">
+        <li class="nav-item">
+          <a class="nav-link " href="https://rulegreen.github.io/news/" data-target="#contact"><span>News</span></a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link " href="https://rulegreen.github.io/publication/" data-target="#contact"><span>Publications</span></a>
@@ -293,6 +296,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Dec 2023: </span> One paper M3SUM is accepted by <em>ICASSP 2024</em>. &#128516; </li>
           <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a>. We also write a blog <a href="https://candle-walker-56d.notion.site/810f553406cb42558c41d00a560467cf">here</a> for better understanding. Feel free to star or add your papers. </li>
           <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
           <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
@@ -357,7 +361,7 @@
           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <img src="https://img.shields.io/badge/LLM-orange">
-          <span><em>Findings of EMNLP 2023</em></span>
+          <span><em>Findings of EMNLP 2023</em> <strong style="color:red">Best Paper Award</strong> at <a href="https://phdforum.se.cuhk.edu.hk/2023/index.html">International Doctoral Forum (2023)</a></span>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
