--- a/publication/index.html
+++ b/publication/index.html
@@ -74,6 +74,10 @@
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex">
                         <li class="nav-item">
+                          <a class="nav-link " href="https://rulegreen.github.io/news/" data-target="#contact"><span>News</span></a>
+                        </li>
+        
+                        <li class="nav-item">
                           <a class="nav-link " href="https://rulegreen.github.io/publication/" data-target="#contact"><span>Publications</span></a>
                         </li>
 
@@ -154,6 +158,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <!-- <div class="grid-sizer col-lg-12 isotope-item" id="container-publications"> -->
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <span class="author_list"><strong>Hongru WANG</strong>, Bohang Zhou, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong: </span>
+                          <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a>
+                          <img src="https://img.shields.io/badge/MM-red">
+                          <span><em>ICASSP 2024</em></span>
+                        </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
