--- a/publication/index.html
+++ b/publication/index.html
@@ -161,7 +161,7 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru WANG</strong>, Bohang Zhou, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong: </span>
+                          <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong: </span>
                           <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a>
                           <img src="https://img.shields.io/badge/MM-red">
                           <span><em>ICASSP 2024</em></span>
