--- a/talk/index.html
+++ b/talk/index.html
@@ -164,7 +164,10 @@
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
                           <li>Techbeat (将门创投), Dec 2023</li>
-                          <li>深度学习自然语言处理, Nov 2023</li>
+                            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/techbeat.pptx" target="_blank" rel="noopener"> PPT </a>
+                          <li>深度学习自然语言处理, Nov 2023
+                            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/nice.pptx" target="_blank" rel="noopener"> PPT </a>
+                          </li> 
                           <li>Huawei Noah Lab (HK), Nov 2023</li>
                         </ul>
                     </ul>
