--- a/talk/index.html
+++ b/talk/index.html
@@ -163,8 +163,9 @@
                         
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
-                          <li>Techbeat (将门创投), Dec 2023</li>
+                          <li>Techbeat (将门创投), Dec 2023
                             <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/techbeat.pptx" target="_blank" rel="noopener"> PPT </a>
+                          </li>
                           <li>深度学习自然语言处理, Nov 2023
                             <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/talk/ppts/nice.pptx" target="_blank" rel="noopener"> PPT </a>
                           </li> 
