change paper format

--- a/talk/index.html
+++ b/talk/index.html
@@ -134,6 +134,7 @@
                     <ul>
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
+                          <li>MLNP, Dec 2023</li>
                           <li>OpenMMLab 社区开放麦, Dec 2023</li>
                         </ul>
                     </ul>
