--- a/publication/index.html
+++ b/publication/index.html
@@ -153,6 +153,10 @@
             </h2>
         </div>
 
+        <div class="universal-wrapper pt-3">
+            <h3>2023</h3>
+        </div>
+
 
         <div class="universal-wrapper">
             <div class="row">
@@ -161,127 +165,138 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong: </span>
-                          <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a>
-                          <img src="https://img.shields.io/badge/MM-red">
-                          <span><em>ICASSP 2024</em></span>
+                          <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a> 
+                          <img src="https://img.shields.io/badge/MM-red"> 
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
+                          <span><i>ICASSP 2024</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai- Chung Kwan, Irwin King, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2310.08840.pdf">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
                           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
                           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-                          <img src="https://img.shields.io/badge/LLM-orange">
-                          <span><em>Findings of EMNLP 2023</em></span>
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai-Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
+                          <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
                           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
-                          <img src="https://img.shields.io/badge/LLM-orange">
-                          <span><em>Findings of EMNLP 2023</em></span>
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list"><strong>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
+                          <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"> Zezhong Wang*, Luyao YE*, <strong>Hongru Wang</strong>, Wai-Chung Kwan, David Ho, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2108.11635">Read-Prompt: A Readable Prompting Method for Reliable Knowledge Probing </a>
                           <img src="https://img.shields.io/badge/Knowledge_Probing-magenta">
-                          <img src="https://img.shields.io/badge/LLM-orange">
-                          <span><em>Findings of EMNLP 2023</em></span>
+                          <img src="https://img.shields.io/badge/LLM-orange"><br>
+                          <span class="author_list"> Zezhong Wang*, Luyao YE*, <strong>Hongru Wang</strong>, Wai-Chung Kwan, David Ho, Kam-Fai Wong </span> <br>
+                          <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via Knowledge Enhancement and Alignment </a>
-                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-                          <span><em>Findings of EMNLP 2023</em></span>
+                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
+                          <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong </span> <br>
+                          <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"> Yang Deng, Lizi Liao, Liang Chen, <strong>Hongru Wang</strong>, Wenqiang Lei, Tat-Seng Chua: </span>
                           <a href="https://arxiv.org/abs/2305.13626.pdf"> Prompting and Evaluating Large Language Models for Proactive Dialogues: Clarification, Target-guided, and Non-collaboration </a>
-                          <img src="https://img.shields.io/badge/LLM-orange">
-                          <span><em>Findings of EMNLP 2023</em></span>
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list"> Yang Deng, Lizi Liao, Liang Chen, <strong>Hongru Wang</strong>, Wenqiang Lei, Tat-Seng Chua </span> <br>
+                          <span><i>Findings, EMNLP 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
-                          <img src="https://img.shields.io/badge/TOD_NLU-teal">
+                          <img src="https://img.shields.io/badge/TOD_NLU-teal"> <br>
+                          <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </span> <br>
                           <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> oral paper </strong></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong: </span>
                           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
-                          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
-                          <span><em>Findings of ACL 2023</em></span>
+                          <img src="https://img.shields.io/badge/PersonalizedDS-blue"> <br>
+                          <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </span>
+                          <span><i>Findings, ACL 2023</i></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu: </span>
-                          <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
-                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-                          <span><em>ACL 2023</em></span>
+                           <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
+                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
+                          <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </span> <br>
+                          <span><i>ACL 2023</i></span>
                         </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong: </span>
-                          <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
-                          <img src="https://img.shields.io/badge/Other-red">
-                          <span><em>Findings of EMNLP 2022</em></span>
-                        </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"> <strong>Hongru Wang</strong>, Mingyu Cui, Zimo Zhou, Kam-Fai Wong: </span>
-                          <a href="https://aclanthology.org/2022.icnlsp-1.3/">TopicRefine: Joint Topic Prediction and Dialogue Response Generation for Multi-turn End-to-End Dialogue System</a>
-                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-                          <span><em>ICNLSP 2022</em></span>
-                        </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"> Zezhong Wang*, <strong>Hongru Wang*</strong>, Wai Chung Kwan, Kam-Fai Wong: </span>
-                          <a href="https://aclanthology.org/2022.icnlsp-1.4/">Prior Omission of Dissimilar Source Domain(s) for Cost-Effective Few-Shot Learning</a>
-                          <img src="https://img.shields.io/badge/TOD_NLU-teal">
-                          <span><em>ICNLSP 2022</em></span>
-                        </div>
-
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong: </span>
-                          <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
-                          <img src="https://img.shields.io/badge/TOD_DPL-teal">
-                          <img src="https://img.shields.io/badge/RLAIF-olive">
-                          <span><em>ICASSP 2022</em></span>
-                        </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list"><strong>Hongru WANG</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG: </span>
-                          <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>
-                          <img src="https://img.shields.io/badge/Other-red">
-                          <span><em>SemEval 2020</em></span>
-                        </div>
-                    
                     <!-- </div> -->
                 
                 </div>
             </div>
         </div>
+
+        <div class="universal-wrapper pt-3">
+            <h3>2022</h3>
+        </div>
+
+        <div class="universal-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
+                          <img src="https://img.shields.io/badge/Other-red"> <br>
+                          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong</span>
+                          <span><i>Findings, EMNLP 2022</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://aclanthology.org/2022.icnlsp-1.3/">TopicRefine: Joint Topic Prediction and Dialogue Response Generation for Multi-turn End-to-End Dialogue System</a>
+                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
+                          <span class="author_list"> <strong>Hongru Wang</strong>, Mingyu Cui, Zimo Zhou, Kam-Fai Wong</span> <br>
+                          <span><i>ICNLSP 2022</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://aclanthology.org/2022.icnlsp-1.4/">Prior Omission of Dissimilar Source Domain(s) for Cost-Effective Few-Shot Learning</a>
+                          <img src="https://img.shields.io/badge/TOD_NLU-teal"> <br>
+                          <span class="author_list"> Zezhong Wang*, <strong>Hongru Wang*</strong>, Wai Chung Kwan, Kam-Fai Wong</span> <br>
+                          <span><i>ICNLSP 2022</i></span>
+                        </div>
+
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
+                          <img src="https://img.shields.io/badge/TOD_DPL-teal">
+                          <img src="https://img.shields.io/badge/RLAIF-olive"> <br>
+                          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</span><br>
+                          <span><i>ICASSP 2022</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>
+                          <img src="https://img.shields.io/badge/Other-red"> <br>
+                          <span class="author_list"><strong>Hongru WANG</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</span> <br>
+                          <span><i>SemEval, COLING 2020</i></span>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js" integrity="sha256-lqvxZrPLtfffUl2G/e7szqSvPBILGbwmsGE1MKlOi0Q=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
