change paper format

--- a/resources/index.html
+++ b/resources/index.html
@@ -133,6 +133,8 @@
 
                     <ul>
                         <li><a href="https://github.com/ruleGreen/Survey-Evolution-DS">&#128214; Survey of Evolution of LM-Based Dialogue System (constantly updating!!)</a></li>
+                        <li><a href="https://github.com/ruleGreen/RAG_LLM">&#128214; RAG_LLM</a></li>
+                        <li><a href="https://github.com/ruleGreen/RandomReading">&#128214; Random Reading List</a></li>
                     </ul>
                 
                 </div>
