--- a/publication/index.html
+++ b/publication/index.html
@@ -137,10 +137,10 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong: </span>
                       <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
-                      <img src="https://img.shields.io/badge/TOD_DPL-teal">
-                      <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
+                      <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
+                      <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong</span> <br>
+                      <span><i>Machine Intelligence Research</i> <strong style="color:red">Invited Paper </strong></span>
                     </div>
                 
                 </div>
@@ -180,6 +180,9 @@
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai-Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -189,6 +192,9 @@
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><strong>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong </span> <br>
                           <span><i>Findings, EMNLP 2023</i></span>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/Cue-CoT" target="_blank" rel="noopener"> Code </a>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_poster.pdf" target="_blank" rel="noopener"> Poster </a>
+                          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/cuecot/cuecot_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -228,7 +234,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
                           <img src="https://img.shields.io/badge/PersonalizedDS-blue"> <br>
-                          <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </span>
+                          <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </span> <br>
                           <span><i>Findings, ACL 2023</i></span>
                         </div>
 
@@ -256,7 +262,7 @@
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
                           <img src="https://img.shields.io/badge/Other-red"> <br>
-                          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong</span>
+                          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong</span> <br>
                           <span><i>Findings, EMNLP 2022</i></span>
                         </div>
 
