--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
-          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai- Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
+          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai-Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
           <span><em>Findings, EMNLP 2023</em> <strong style="color:red">Best Paper Award</strong> at <a href="https://phdforum.se.cuhk.edu.hk/2023/index.html">International Doctoral Forum (2023)</a></span>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
@@ -636,7 +636,7 @@
   </div>
 </div>
 
-    </div>
+  </div>
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -684,25 +684,13 @@
   </script>
   <script src="/js/academic.min.37431be2d92d7fb0160054761ab79602.js"></script>
 
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Wo77HFv7DeWIgGOZUPRSVWMZXCw65OCKM2M4aIC-Rf0"></script>
+
   <div class="container">
     <footer class="site-footer">          
-  <p class="powered-by">
-    Powered by the
-    <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
-    <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
-
-    
-    <span class="float-right" aria-hidden="true">
-      <a href="#" class="back-to-top">
-        <span class="button_icon">
-          <i class="fas fa-chevron-up fa-2x"></i>
-        </span>
-      </a>
-    </span>
-    
-  </p>
-</footer>
-</div>
+    <span>Last updated: Dec, 2023</span>
+  </footer>
+  </div>
 <div id="modal" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
