--- a/talk/index.html
+++ b/talk/index.html
@@ -132,10 +132,9 @@
                 <div class="col-lg-12">
 
                     <ul>
-                        <li>A Survey of Evolution of LM-based Dialogue System</li>
+                        <!-- <li>A Survey of Evolution of LM-based Dialogue System</li>
                         <ul>
-                          <li>MLNLP, Dec 2023</li>
-                        </ul>
+                        </ul> -->
                     </ul>
                 
                 </div>
@@ -158,6 +157,7 @@
                         <li>A Survey of Evolution of LM-based Dialogue System</li>
                         <ul>
                             <li>OpenMMLab 社区开放麦, Dec 2023</li>
+                            <li>MLNLP, Dec 2023</li>
                         </ul>
 
                         <li><a href="/papers/safari/safari_emnlp2023.pdf">Large Language Model as Source Planner for Knowledge-grouded Dialogue System</a></li>
