add lrec-coling 2024

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
               </a>
             </li>
 
+            <li>
+              <a href="/cv/hongru.jpg" target="_blank" rel="noopener">
+                <i class="fa-brands fa-weixin" style="color: #2f8819;"></i>
+              </a>
+            </li>
+
+
           </ul>
 
         </div>
@@ -296,6 +303,8 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Feb 2024: </span> Three papers are accepted by LREC-COLING 2024, including one first-author work: <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever</a>. &#128525;</li>
+          <li>Jan 2024: </span> Very happy to receive visiting offer from University of Edinburgh, and see u at Europe!! </li>
           <li>Dec 2023: </span> One paper M3SUM is accepted by <em>ICASSP 2024</em>. &#128516; </li>
           <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a>. We also write a blog <a href="https://candle-walker-56d.notion.site/810f553406cb42558c41d00a560467cf">here</a> for better understanding. Feel free to star or add your papers. </li>
           <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
@@ -343,6 +352,17 @@
           </div>
         </div>
       -->
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive Conversational Retrieval</a> 
+          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+          <span class="author_list"><strong>Hongru WANG</strong>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
+          <span><i>LREC-COLING 2024</i></span>
+        </div>
+
+
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="tbd">M3Sum: A Novel Unsupervised Language-guided Video Summarization</a> 
