--- a/publication/index.html
+++ b/publication/index.html
@@ -157,6 +157,46 @@
             <h3>2023</h3>
         </div>
 
+        <div class="universal-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="tbd">MCIL: Multimodal Counterfactual Instance Learning for Low-resource Entity-based Multimodal Information Extraction</a> 
+                      <img src="https://img.shields.io/badge/MM-red">
+                      <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                      <span class="author_list">Baohang Zhou, Ying Zhang, Kehui Song, <strong>Hongru WANG</strong>, Yu Zhao, Xuhui Sui and Xiaojie Yuan</span><br>
+                      <span><i>LREC-COLING 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="https://arxiv.org/abs/2309.00230.pdf">JoTR: A Joint Transformer and Reinforcement Learning Framework for Dialog Policy Learning</a> 
+                      <img src="https://img.shields.io/badge/TOD_DPL-teal">
+                      <img src="https://img.shields.io/badge/RLAIF-olive"> <br>
+                      <span class="author_list">Wai-Chung Kwan, Huimin Wang, <strong>Hongru WANG</strong>, Zezhong Wang, Xian Wu, Yefeng Zheng, Kam-Fai Wong </span><br>
+                      <span><i>LREC-COLING 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever: Multi-task Candidates Selection for Various Context-Adaptive Conversational Retrieval</a> 
+                      <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list"><strong>Hongru WANG</strong>, Boyang Xue, Baohang Zhou, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Kam-Fai Wong </span><br>
+                      <span><i>LREC-COLING 2024</i></span>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+
+        <div class="universal-wrapper pt-3">
+            <h3>2023</h3>
+        </div>
+
 
         <div class="universal-wrapper">
             <div class="row">
