add lrec-coling 2024

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
             <li>
               <a href="/cv/hongru.jpg" target="_blank" rel="noopener">
-                <i class="fa-brands fa-weixin" style="color: #2f8819;"></i>
+                <i class="fab fa-weixin big-icon" style="color: #2f8819;"></i>
               </a>
             </li>
 
@@ -710,7 +710,7 @@
 
   <div class="container">
     <footer class="site-footer">          
-    <span>Last updated: Dec, 2023</span>
+    <span>Last updated: Feb, 2024</span>
   </footer>
   </div>
 <div id="modal" class="modal fade" role="dialog">
