--- a/publication/index.html
+++ b/publication/index.html
@@ -306,7 +306,7 @@
                           <span><i>Findings, EMNLP 2022</i></span>
                         </div>
 
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                        <!-- <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://aclanthology.org/2022.icnlsp-1.3/">TopicRefine: Joint Topic Prediction and Dialogue Response Generation for Multi-turn End-to-End Dialogue System</a>
                           <img src="https://img.shields.io/badge/KnowledgeDS-yellow"> <br>
@@ -321,7 +321,7 @@
                           <span class="author_list"> Zezhong Wang*, <strong>Hongru Wang*</strong>, Wai Chung Kwan, Kam-Fai Wong</span> <br>
                           <span><i>ICNLSP 2022</i></span>
                         </div>
-
+ -->
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
