--- a/index.html
+++ b/index.html
@@ -303,16 +303,9 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li>Feb 2024: </span> Three papers are accepted by LREC-COLING 2024, including one first-author work: <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever</a>. &#128525;</li>
+          
+          <li>Feb 2024: </span> Three papers are accepted by <em>LREC-COLING 2024</em>, including one first-author work: <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever</a>. &#128525;</li>
           <li>Jan 2024: </span> Very happy to receive visiting offer from University of Edinburgh, and see u at Europe!! </li>
-          <li>Dec 2023: </span> One paper M3SUM is accepted by <em>ICASSP 2024</em>. &#128516; </li>
-          <li>Nov 2023: </span> So delight to announce our recent <a href="https://arxiv.org/pdf/2311.16789.pdf">survey paper about the evolution of LM-based Dialogue Systems</a> and also the paper list at <a href="https://github.com/ruleGreen/Survey-Evolution-DS">Github repo</a>. We also write a blog <a href="https://candle-walker-56d.notion.site/810f553406cb42558c41d00a560467cf">here</a> for better understanding. Feel free to star or add your papers. </li>
-          <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
-          <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
-          <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning! &#128640; &#128640; &#128640; </li>
-          <li>Sep 2023: </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference (oral), See u in Bali.</li>
-          <li>May 2023: </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
-          <li>May 2023: </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
 
         </ul>
         
