--- a/publication/index.html
+++ b/publication/index.html
@@ -183,7 +183,7 @@
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="https://arxiv.org/abs/2403.02756.pdf">Role Prompting Guided Domain Adaptation with General Capability Preserve for Large Language Models</a> 
                       <img src="https://img.shields.io/badge/LLM-orange">
-                      <img src="https://img.shields.io/badge/Safety-red"> <br>
+                      <img src="https://img.shields.io/badge/Continual_Learning-gray"> <br>
                       <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <strong>Hongru Wang</strong>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
                       <span><i>NAACL 2024</i></span>
                     </div>
@@ -245,7 +245,7 @@
                           <img src="https://img.shields.io/badge/MM-red"> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list"><strong>Hongru WANG*</strong>, Baohang Zhou*, Zhengkun Zhang, Yiming Du, David Ho, Kam-Fai Wong </span><br>
-                          <span><i>ICASSP 2024</i></span>
+                          <span><i>ICASSP 2024</i></span> <strong style="color:red"> [oral paper] </strong>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
