--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai-Chung Kwan, Irwin King, Kam-Fai Wong </span> <br>
           <span><em>Findings, EMNLP 2023</em> <br>
-          <strong style="color:red">Best Paper Award</strong> at <a href="https://phdforum.se.cuhk.edu.hk/2023/index.html">International Doctoral Forum (2023)</a></span>
+          <strong style="color:red">[Best Paper Award]</strong> at <a href="https://phdforum.se.cuhk.edu.hk/2023/index.html">International Doctoral Forum (2023)</a></span>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/SAFARI" target="_blank" rel="noopener"> Code </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
