--- a/index.html
+++ b/index.html
@@ -112,11 +112,6 @@
         <li class="nav-item">
           <a class="nav-link " href="https://rulegreen.github.io/resources/"><span>Resources</span></a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
-        </li>
-
       </ul>
     </div>
 
@@ -219,7 +214,7 @@
       <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">[CV]</a></h1>
 
       
-      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh, working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://mp.weixin.qq.com/s/_lisgXd2MOaFhl3cz-8znA">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP.</p>
+      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh, working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://mp.weixin.qq.com/s/_lisgXd2MOaFhl3cz-8znA">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <br>
@@ -229,7 +224,7 @@
 
       <br>
 
-      If you are interested in my work, I dedicate 60 minutes per week to chat with persons, feel free to say hi if you want to discuss or cooperate.
+      If you are interested in my work, I dedicate 60 minutes per week to chat with persons, feel free to say hi if you want to discuss or cooperate. &#128198;&#128198;&#128198;
 
       <!-- Calendly link widget begin -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
