--- a/publication/index.html
+++ b/publication/index.html
@@ -92,10 +92,6 @@
                         <li class="nav-item">
                           <a class="nav-link " href="https://rulegreen.github.io/resources/"><span>Resources</span></a>
                         </li>
-                        
-                        <li class="nav-item">
-                          <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
-                        </li>
                     </ul>
                 </div>
                 <!-- <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
@@ -185,7 +181,7 @@
                       <img src="https://img.shields.io/badge/LLM-orange">
                       <img src="https://img.shields.io/badge/Continual_Learning-gray"> <br>
                       <span class="author_list">Rui Wang, Fei Mi, Yi Chen, Boyang XUE, <strong>Hongru Wang</strong>, Qi Zhu, Kam-Fai Wong, Ruifeng Xu </span><br>
-                      <span><i>NAACL 2024</i></span>
+                      <span><i>Findings, NAACL 2024</i></span>
                     </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
