--- a/publication/index.html
+++ b/publication/index.html
@@ -145,7 +145,7 @@
                       <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
                       <img src="https://img.shields.io/badge/TOD_DPL-teal"> <br>
                       <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong</span> <br>
-                      <span><i>Machine Intelligence Research</i> <strong style="color:red">Invited Paper </strong></span>
+                      <span><i>Machine Intelligence Research</i> <strong style="color:red">[Invited Paper]</strong></span>
                     </div>
                 
                 </div>
@@ -165,6 +165,23 @@
         <div class="universal-wrapper">
             <div class="row">
                 <div class="col-lg-12">
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">Medical Dialogue: A Survey of Categories, Methods, Evaluation and Challenges</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang,<strong>Hongru WANG</strong>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
+                      <span><i>Findings of ACL 2024</i></span>
+                    </div>
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">DPDLLM: A Black-box Framework for Detecting Pre-training Data from Large Language Models</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Safety-red"> <br>
+                      <span class="author_list">Baohang Zhou, Zezhong WANG, Lingzhi Wang, <strong>Hongru WANG</strong>, Ying Zhang, Kehui Song, Xuhui Sui, Kam-Fai Wong </span><br>
+                      <span><i>Findings of ACL 2024</i></span>
+                    </div>
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -299,7 +316,7 @@
                           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
                           <img src="https://img.shields.io/badge/TOD_NLU-teal"> <br>
                           <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </span> <br>
-                          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> oral paper </strong></span>
+                          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red">[oral paper]</strong></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
