--- a/index.html
+++ b/index.html
@@ -288,11 +288,18 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>May 2024: Two papers are accepted by <em>ACL 2024</em>, But non-first authors. Sad stroy. </li>
+
+          <li>May 2024: We won the champion of <a href="https://ospc.aisingapore.org/">Online Safety Prize Challenge organized by AI singapore</a> <img src="images/trophy.png" width="15" height="15"> </li>
 
           <li>Apr 2024: We are about to organize the SIGIR 2024 tutorial: <a href="https://rulegreen.github.io/services/tools-meet-llm/">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> &#128525; </li>
+
           <li>Mar 2024: Three papers are accepted by <em>NAACL 2024</em>, including one co-first author work: <a href="https://arxiv.org/abs/2305.13733.pdf">INDust</a> targets inductive instructions of users, accompany with Dual-critique method. &#128525; </li>
+          
           <li>Mar 2024: One paper <a href="https://www.sciencedirect.com/science/article/pii/S0885230824000202">KddRES</a>, which is a first Cantonese task-oriented dialogue dataset, is accepted by the journal of <em>Computer Speech and Language</em> (SCI Q2, IF: 4.3). </li>
+
           <li>Feb 2024: </span> Three papers are accepted by <em>LREC-COLING 2024</em>, including one first-author work: <a href="/papers/uniretriever/universal_retrieval.pdf">UniRetriever</a>. &#128525;</li>
+          
           <li>Jan 2024: </span> Very happy to receive visiting offer from University of Edinburgh, and see u at Europe!! </li>
 
         </ul>
